syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto

package grpc;

message  StartRecodeRequest{
  string port = 1;
  string deviceName = 2; 
  uint32 channels = 3;
  uint32 rate = 4;
}

message StartRecodeResponse{
}

message StopRecodeRequest {
    string port = 1;
}

message StopRecodeResponse{
}

// grpc service to recode audio
service Recoder {
    rpc StartRecode (StartRecodeRequest) returns (StartRecodeResponse) {}
    rpc StopRecode (StopRecodeRequest) returns (StopRecodeResponse) {}
}

